--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,23 +4,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#697475">
     <android.support.constraint.ConstraintLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="8dp">
-        <ImageView
-            android:id="@+id/iv_poster_detail"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/tv_movie_title"
@@ -29,10 +18,24 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:textAlignment="center"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_poster_detail" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_poster_detail"
+            android:layout_width="match_parent"
+            android:layout_height="345dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />
 
         <TextView
             android:id="@+id/tv_overview_lbl"
@@ -40,15 +43,16 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            app:layout_constraintEnd_toEndOf="@+id/tv_movie_title"
-            app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
-            app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />
+            android:text="@string/overview_lbl"
+            app:layout_constraintEnd_toEndOf="@+id/iv_poster_detail"
+            app:layout_constraintStart_toStartOf="@+id/iv_poster_detail"
+            app:layout_constraintTop_toBottomOf="@id/iv_poster_detail" />
 
         <TextView
             android:id="@+id/tv_overview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/tv_overview_lbl"
@@ -62,6 +66,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:gravity="center"
+            android:text="@string/release_date_lbl"
             app:layout_constraintEnd_toEndOf="@+id/tv_overview"
             app:layout_constraintStart_toStartOf="@+id/tv_overview"
             app:layout_constraintTop_toBottomOf="@+id/tv_overview" />
@@ -83,6 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:gravity="center"
+            android:text="@string/rating_lbl"
             app:layout_constraintEnd_toEndOf="@+id/tv_release_date"
             app:layout_constraintStart_toStartOf="@+id/tv_release_date"
             app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />
