--- a/app/src/main/res/layout/poster_item.xml
+++ b/app/src/main/res/layout/poster_item.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:paddingLeft="4dp"
-    android:paddingRight="4dp"
-    >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_poster_main"
         android:layout_width="166dp"
-        android:layout_height="185dp" />
+        android:layout_height="185dp"
+        android:layout_gravity="center_horizontal"
+        android:padding="8dp" />
 
 </LinearLayout>
