--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -12,24 +12,14 @@
         app:showAsAction="ifRoom">
         <menu>
             <item
-                android:id="@+id/sort_pop_asc"
+                android:id="@+id/sort_popularity"
                 android:orderInCategory="1"
-                android:title="@string/sub_pop_asc_sort"
+                android:title="@string/sub_popularity_sort"
                 app:showAsAction="ifRoom"/>
             <item
-                android:id="@+id/sort_pop_desc"
+                android:id="@+id/sort_top_rated"
                 android:orderInCategory="2"
-                android:title="@string/sub_pop_desc_sort"
-                app:showAsAction="ifRoom"/>
-            <item
-                android:id="@+id/sort_rate_asc"
-                android:orderInCategory="3"
-                android:title="@string/sub_rate_asc_sort"
-                app:showAsAction="ifRoom"/>
-            <item
-                android:id="@+id/sort_rate_desc"
-                android:orderInCategory="4"
-                android:title="@string/sub_rate_desc_sort"
+                android:title="@string/sub_top_rated_sort"
                 app:showAsAction="ifRoom"/>
         </menu>
     </item>
